src/objects/Catalog_Line_Item__c.object
<CustomObject>
    <description>A line item in a Catalog Order for use with the Catalog mobile app.</description>
    <fields>
        <fullName>Catalog_Order__c</fullName>
        <label>Order</label>
        <referenceTo>Catalog_Order__c</referenceTo>
        <relationshipLabel>Catalog Line Items</relationshipLabel>
        <relationshipName>Catalog_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <formula>Product_Price__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <formula>Product__r.Default_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Short_Description__c</fullName>
        <formula>Product__r.Blurb__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Catalog Line Items</relationshipLabel>
        <relationshipName>Catalog_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <description>A subtotal for the line item to help with Order roll-up calculations.</description>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VF_Image__c</fullName>
        <formula>Product__r.VF_Image__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VF Image</label>
        <type>Text</type>
    </fields>
    <label>Catalog Line Item</label>
    <nameField>
        <displayFormat>CLI-{00000}</displayFormat>
        <label>Catalog Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>